# AMMS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: main.py  scheduler.py
bot/alerts/: telegram.py
bot/api/: server.py
bot/broker/: alpaca.py
bot/db/: models.py  repository.py
bot/risk/: manager.py
bot/strategy/: base.py  combiner.py  filters.py  momentum.py  rsi.py
config/: settings.py
docker/: Dockerfile  entrypoint.sh
docs/: DESIGN.md  OPS.md  PROFILES.md  SETUP.md
profiles/: day-trade.yaml  penny.yaml  swing.yaml  wsb.yaml
scripts/: backup.sh
src/amms/: cli.py  clock.py  config.py  db.py  executor.py  metrics.py  runtime_overrides.py  scheduler.py
tests/: conftest.py  test_accum_dist.py  test_adaptive_rsi.py  test_adx.py  test_alpaca_broker.py  test_alpaca_client.py  test_anchored_vwap.py  test_announce_tick.py  test_app_config.py  test_auto_trader.py  test_backtest_engine.py  test_backtest_report.py  test_backtest_stats.py  test_bars.py  test_bb_squeeze.py  test_beta_calculator.py  test_bollinger.py  test_breadth_proxy.py  test_breakout.py  test_breakout_detector.py  test_broker.py  test_calendar_anomaly.py  test_candlestick.py  test_candlestick_patterns.py  test_cci.py  test_chaikin_mf.py  test_chaikin_volatility.py  test_chande_mo.py  test_circuit_breaker.py  test_cli.py  test_clock_broker.py  test_combiner.py  test_composite_strategy.py  test_concentration_risk.py  test_config.py  test_confluence.py  test_connors_rsi.py  test_coppock_curve.py  test_corr_breakdown.py  test_correlation_matrix.py  (+169 more)
(+207 files in other folders)
